Fix minor issue and update the documentation
